# quadrupedal-sim

./: .gitignore  LICENSE  README.md  requirements.txt
arduino/: servo_control.ino
model/: model_action.py
model/robot/: 18g_servo_v1.stl  18g_thigh_servo_attachment_v3.stl  9g_servo_arm_v1.part  bearing_10x15x4_v1.stl  left_forearm_servo_attachment_v1.part  right_forearm_servo_attachment_v1.part  top_body_v21.stl  top_hip_servo_v14.part
ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros/install/model/share/model/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros/log/: latest_build  latest_test
sim/test/: serial_test.py
src/: enumed_dof.txt  moving_model.py  test.py
src/agent/: quadruped_walk.py
src/env/: actor.py  critic.py  eval.py  quadruped_env.py  quadruped_train.py  quadruped_walk.py
src/model/: 18g_servo_v1.part  18g_thigh_servo_attachment_v3.part  9g_servo_arm_v1.part  9g_thigh_servo_attachment_v1.part  bearing_10x15x4_v1.part  bearing_5x8x2.5_v1.part  bottom_body_v3.part  bottom_hip_servo_v12.part  config.json  hip_cage_v4.part  hip_joint_to_bearing_v3.part  hip_joint_to_servo_v2.part  hip_v2.part  left_cover_v2.part  left_forearm_inside_v1.part  left_forearm_linkage_v1.part  left_forearm_outside_v1.part  left_forearm_pivot_v1.part  left_forearm_servo_attachment_v1.part  left_thigh_v1.part  lever_v1.part  microservosg90.part  right_cover_v2.part  right_cover_v2.stl  right_forearm_inside_v1.part  right_forearm_inside_v1.stl  right_forearm_linkage_v1.part  right_forearm_outside_v1.part  (+13 more)
(+159 files in other folders)
